Update landscape css

--- a/demo/templates/index.html
+++ b/demo/templates/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <header>
     <title>BAN-VQA Demo</title>
-    <link rel="stylesheet" type="text/css" href="static/main.css">
+    <link rel="stylesheet" type="text/css" href="static/{{ style }}.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>
         {% if is_query %}
