--- a/demo/templates/index.html
+++ b/demo/templates/index.html
@@ -25,7 +25,7 @@
 <div class="demo">
 {% if imageid %}
     <div class="header">
-        VQA 2.0 Test-{{ imageid }} <span class="title"><img src="static/logo.png"/></span>
+        <img src="static/vqa_logo.png" style="height: 50px"/> <span class="text">2.0 test-{{ imageid }}</span><span class="title"> <img src="static/logo.png"/></span>
     </div>
     <div class="imgbox">
         <img src="{{ impath }}"/>
