--- a/demo/templates/index.html
+++ b/demo/templates/index.html
@@ -43,7 +43,7 @@
     </div>
     <div class="actbox">
         <form action="/query" method="post">
-            <div class="wrapper"><input type="text" name="question" autofocus/></div>
+            <div class="wrapper"><input type="text" name="question" placeholder="Your question?" autofocus/></div>
             <input type="button" value="Random" class="refresh"/>
             <input type="submit" value="Query"/>
         </form>
